# dotfiles

garden-sentinel/: Dockerfile.edge  Dockerfile.server  README.md  pyproject.toml
garden-sentinel/.github/workflows/: build.yaml  ci.yaml
garden-sentinel/config/: edge.example.yaml  server.example.yaml
garden-sentinel/dashboard/: .env.example  .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
garden-sentinel/dashboard/src/: App.tsx  index.css
garden-sentinel/dashboard/src/components/: Layout.tsx
garden-sentinel/dashboard/src/lib/: api.ts
garden-sentinel/dashboard/src/pages/: Alerts.tsx  Analytics.tsx  Cameras.tsx  Dashboard.tsx  Login.tsx  MapView.tsx  Settings.tsx
garden-sentinel/dashboard/src/stores/: authStore.ts
garden-sentinel/deploy/: docker-compose.yaml
garden-sentinel/deploy/caddy/: Caddyfile
garden-sentinel/deploy/config/: server.yaml
garden-sentinel/deploy/mosquitto/: mosquitto.conf
garden-sentinel/deploy/nginx/: garden-sentinel.conf
garden-sentinel/deploy/prometheus/: prometheus.yml
garden-sentinel/garden_sentinel/: __init__.py
garden-sentinel/garden_sentinel/edge/: __init__.py  audio_deterrent.py  camera.py  communicator.py  edge_inference.py  gpio_controller.py  health_monitor.py  main.py  motion_detector.py  offline_mode.py  recorder.py  servo_controller.py  streaming.py  targeting.py  tracker.py  voice_announcements.py
garden-sentinel/garden_sentinel/edge/config/: config.example.yaml  config.yaml
garden-sentinel/garden_sentinel/edge/ota/: __init__.py  update_manager.py  version.py
garden-sentinel/garden_sentinel/server/: __init__.py  main.py
garden-sentinel/garden_sentinel/server/alerts/: __init__.py  alert_manager.py  push_notifications.py
garden-sentinel/garden_sentinel/server/analytics/: __init__.py  pattern_analyzer.py
garden-sentinel/garden_sentinel/shared/: __init__.py  metrics.py  protocol.py
garden-sentinel/garden_sentinel/tools/: __init__.py  calibration.py
garden-sentinel/garden_sentinel/training/: __init__.py  data_collector.py  train.py
garden-sentinel/packaging/: build-packages.sh  postinst-edge.sh  postinst-server.sh  postrm-edge.sh  postrm-server.sh  prerm-edge.sh  prerm-server.sh
garden-sentinel/scripts/: install-edge.sh  install-server.sh  status.sh
garden-sentinel/systemd/: garden-sentinel-edge.service  garden-sentinel-server.service
garden-sentinel/tests/: __init__.py  conftest.py  test_metrics.py  test_spatial.py
garden-sentinel/tests/edge/: __init__.py  test_health_monitor.py
garden-sentinel/tests/integration/: conftest.py  test_auth_api.py  test_detection_pipeline.py  test_deterrence_system.py  test_device_management.py  test_weather_integration.py  test_websocket_events.py
(+54 files in other folders)
